[package]
name = "ashell"
edition = "2021"
license = "MIT/Apache-2.0"
version = "0.1.0"

[dependencies]
heapless = "0.7.1"
nb = "1.0.0"
uluru = "2.1.1"
embedded-io = { version = "0.4.0", features = ["async"]}
embassy-sync = {path = "../embassy/embassy-sync", version = "0.1.0", features = ["defmt"] }
log = "0.4"

# [dependencies.embedded-hal]
# features = ["unproven"]
# version = "0.2.4"
