[package]
edition = "2021"
name = "main-rp2040"
version = "0.1.0"
license = "MIT OR Apache-2.0"


[dependencies]
embassy-sync = {path = "../embassy/embassy-sync", version = "0.1.0", features = ["defmt"] }
embassy-executor = {path = "../embassy/embassy-executor/", version = "0.1.0", features = ["defmt", "integrated-timers"] }
embassy-time = {path="../embassy/embassy-time/", version = "0.1.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = {path="../embassy/embassy-rp", version = "0.1.0", features = ["defmt", "unstable-traits", "nightly", "unstable-pac", "time-driver", "pio", "critical-section-impl"] }
embassy-usb = {path="../embassy/embassy-usb", version = "0.1.0", features = ["defmt"] }
embassy-net = {path="../embassy/embassy-net", version = "0.1.0", features = ["defmt", "nightly", "tcp", "dhcpv4", "medium-ethernet"] }
embassy-futures = {path="../embassy/embassy-futures/", version = "0.1.0" }
embassy-usb-logger = {path="../embassy/embassy-usb-logger/", version = "0.1.0"}
ashell = {path = "../ashell", version = "0.1.0"}

defmt = "0.3"
defmt-rtt = "0.4"

#cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m = { version = "0.7.6" }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await", "cfg-target-has-atomic", "unstable"] }
display-interface-spi = "0.4.1"
embedded-graphics = "0.7.1"
st7789 = "0.6.1"
display-interface = "0.4.1"
byte-slice-cast = { version = "1.2.0", default-features = false }

embedded-hal-1 = { package = "embedded-hal", version = "=1.0.0-alpha.9" }
embedded-hal-async = "0.2.0-alpha.0"
embedded-io = { version = "0.4.0", features = ["async", "defmt"] }
embedded-storage = { version = "0.3" }
static_cell = "1.0.0"
log = "0.4"
pio-proc = "0.2"
pio = "0.2.1"
heapless = { version = "0.7.5", default-features = false }

[profile.release]
debug = true

[build-dependencies]
cc = "1.0"
# gcc = "0.3"
